hphp/hack/test/typecheck/expression_trees/do_while.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  Code`() ==> {
    $x = 0;
    do {
      $x = $x + 1;
    } while ($x < 0);
  }`;
}
